kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-api
  namespace: max-weather
spec:
  selector:
    app: weather-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
